[package]
name = "river-layout-toolkit"
description = "Write River layouts in Rust with ease"
repository = "https://github.com/MaxVerevkin/river-layout-toolkit"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["MaxVerevkin <maxxverrr@gmail.com>"]

[dependencies]
thiserror = "1.0"

[dependencies.wayrs-client]
git = "https://github.com/MaxVerevkin/wayrs"
rev = "074f58b6b5b6f567bad8b2809d23e52c0e3435c9"

[dependencies.wayrs-scanner]
git = "https://github.com/MaxVerevkin/wayrs"
rev = "074f58b6b5b6f567bad8b2809d23e52c0e3435c9"
