[package]
name = "river-layout-toolkit"
description = "Write River layouts in Rust with ease"
repository = "https://github.com/MaxVerevkin/river-layout-toolkit"
version = "0.1.6"
edition = "2021"
license = "MIT"
authors = ["MaxVerevkin <maxxverrr@gmail.com>"]

[dependencies]
log = "0.4"
thiserror = "1.0"
wayrs-client = "1.0"
